--- a/index.html
+++ b/index.html
@@ -5,15 +5,13 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <title>Circle (template)</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <!--<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@700&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@700&display=swap" rel="stylesheet"> -->
         <link rel="stylesheet" href="./style.css">
     </head>
-
-
 
     <body>
         <header>
@@ -53,7 +51,7 @@
         </section>
 
         <footer class="footer">
-            
+
         </footer>
     </body>
 </html>
