HTML base prototype

--- a/index.html
+++ b/index.html
@@ -15,43 +15,242 @@
 
     <body>
         <header>
+            <nav>
+                <ul>
+                    <li class="header-nav-item" id="nav"><a href="">Features</a></li>
+                    <li class="header-nav-item" id="nav"><a href="">Pricing</a></li>
+                    <li class="header-nav-item" id="nav"><a href="">Testimonials</a></li>
+                    <li class="header-nav-item" id="nav"><a href="">Resources</a></li>
+                </ul>
+            </nav>
 
+            <div class="header-logo"><svg><use href="./assets/svg/"></use></svg></div>
+
+            <nav>
+                <ul>
+                    <li class="header-nav-item" id="nav"><a href="">Company</a></li>
+                    <li class="header-nav-item" id="nav"><a href="">Contact</a></li>
+
+                    <button class="header-nav-button" id="nav"><a href="">Login</a></li>
+                </ul>
+            </nav>
         </header>
 
         <section class="hero-section">
-
+            <div class="container">
+                <h2 class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</h2>
+                <p class="text-description-smaller">With stellar one-click reports and unmatched support, see how Circle will make a difference in your business</p>
+                <button class="button hero-button">Get started free</button>
+                <img class="hero-image" src="assets/images/" width="" height=""/>
+            </div>
         </section>
 
         <section class="customers-section">
+            <div class="container">
+                <div class="section-title"><p>OUR CUSTOMERS</p></div>
+                <h2 class="lower-title">Trusted by 100,000+ customers in 90+ countries</h2>
 
+                <ul class="customers-logo-row">
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                </ul>
+
+                <div class="customers-stats">
+                    <div class="customers-stats-description">
+                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
+                        <p>18281 signed up last month</p> <!--Highlight-->
+                    </div>
+                    <div class="customers-stats-description">
+                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
+                        <p>GDPR- & CCPA-ready</p> <!--Highlight-->
+                    </div>
+                    <div class="customers-stats-description">
+                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
+                        <p>Leader@G2 Summer</p> <!--Highlight-->
+                    </div>
+                </div>
+
+            </div>
         </section>
 
         <section class="promises-section">
-
+            <div class="container promises-container"> <!--Smaller container 248px from sides-->
+                <div class="side-textbox">
+                    <div class="section-title"><p>OUR PROMISE</p></div>
+                    <h2 class="lower-title">Tool built for people.</h2>
+                    <div class="text-description"><p>Whether you want to edit your Google Docs, resolve Jira issues, or collaborate over Zoom.</p>
+                        <p>Circle has 100+ integrations with tools you already use and love.</p>
+                    </div>
+                    <button class="start-button">Get started free</button>
+                </div>
+                <img class="promises-img" src="assets/images/" width="" height=""/>
+            </div>
         </section>
 
         <section class="awards-section">
-
+            <div class="container">
+                <div class="section-title"><p>AWARDS</p></div>
+                <h2 class="lower-title">An award winning platform, loved by customers.</h2>
+                <div class="awards-cards-block">
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Market leader across 18 categories</p></div>
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Most loved SaaS tool in 2021</p></div>
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Category leader in 2022</p></div>
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Most recommended tool in 2021</p></div>
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Champion in survey tool 2022</p></div>
+                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Top performer spring 2021</p></div>
+                </div>
+            </div>
         </section>
 
         <section class="BfP-section">
-
+            <div class="container">
+                <div class="section-title"><p>BUILT FOR PEOPLE</p></div>
+                <h2 class="lower-title">Easy for beginners. Powerful for experts.</h2>
+                <div class="BfP-slider">
+                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Create</button>
+                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Distribute</button>
+                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Collect</button>
+                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Analyze</button>
+                </div>
+                <div class="BfP-display-container">
+                    <div class="BfP-display">
+                        <div class="BfP-display-block">
+                            <h1 class="BfP-display-block-title">Create</h1>
+                            <p class="BfP-display-block-subtitle">Advanced  research software</p>
+                            <p class="text-description">
+                                Ask the right questions and get the answers you need with the most secure and collaborative survey platform on the market 
+                                featuring powerful logic, sophisticated analytics, and built-in automation and integration.
+                            </p>
+                            <button class="start-button">Get started for free</button>
+                        </div>
+                        <img class="BfP-display-block" src=""/>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="testemonials-section">
-
+            <div class="container testemonials-container-slider"> <!--Smaller container 248px from sides-->
+                <div class="side-textbox">
+                    <div class="section-title"><p>TESTEMONIALS</p></div>
+                    <h2 class="lower-title">See how customers drive impact</h2>
+                    <button class="smaller-button">See case studies</button>
+                </div>
+                <img class="testemonials-img" src=""/>
+                <svg class="testemonials-playbutton"><use href="./assets/svg/"></use></svg>
+                <div class="testemonials-description-block">
+                    <img class="testemonials-description-block-item testemonials-description-logo" src=""/>
+                    <div class="testemonials-description-block-item"><p class="text-description">
+                        "I used to have a bunch of different tools I had to pay for, with Circle you get everything in one bundle."
+                        </p>
+                    </div>
+                    <div class="testemonials-description-block-item testemonials-description-credit">
+                        <p>Michel Dedrick</p> <!--Bald-->
+                        <p>Senior Conversion Optimizer</p>
+                    </div>
+                </div>
+                <div class="testemonials-slider-buttons">
+                    <img class="testemonials-button button-right" src=""/>
+                    <img class="testemonials-button button-left" src=""/>
+                </div>
+            </div>
         </section>
 
         <section class="solution-section">
-
+            <div class="container"> <!--Smaller container 248px from sides-->
+                <div class="side-textbox">
+                    <h2 class="lower-title">Looking for a solution for your business?</h2> <!--Bald-->
+                    <p class="text-description">Check out Sogolytics enterprise feedback and experience management platform.</p>
+                    <button class="smaller-button">Learn more</button><button class="smaller-button button-white">Schedule a consultation</button>
+                </div>
+                <img class="solution-img" src=""/>
+            </div>
         </section>
 
         <section class="resources-section">
+            <div class="container">
+                <div class="section-title"><p>RESOURCES</p></div>
+                <h2 class="lower-title">Stay in the know</h2>
+                
+                <div class="resources-cards">
+                    <div class="resources-card">
+                        <img class="resources-card-img" src=""/>
+                        <p class="resources-card-title">Excepteur sint occaecat cupidatat non proident</p>
+                        <p class="text-description-smaller">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
+                            sed quia consequuntur magni dolores eosNeque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
+                            consectetur, adipisci veli
+                        </p>
+                        <button class="smaller-button">Read more</button>
+                    </div>
 
+                    <div class="resources-card">
+                        <img class="resources-card-img" src=""/>
+                        <p class="resources-card-title">Quis nostrum exercitationem ullam corporis suscipit laboriosam</p>
+                        <p class="text-description-smaller">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
+                            suscipit laboriosam. nisi ut aliquid ex ea commodi consequatur autem vel eum iure reprehenderit
+                        </p>
+                        <button class="smaller-button">Read more</button>
+                    </div>
+
+                    <div class="resources-card">
+                        <img class="resources-card-img" src=""/>
+                        <p class="resources-card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                        <p class="text-description-smaller">Coluptatem accusantium doloremque laudantium, totam rem aperiam 
+                            Aaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
+                        </p>
+                        <button class="smaller-button">Read more</button>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <footer class="footer">
-
+            <div class="container">
+                <div class="footer-menu">
+                    <div class="SanFrancisco">
+                        <img class="SanFrancisco-img" src=""/>
+                        <p class="SanFrancisco-text">Made with lots of ❤️ in San Francisco</p>
+                    </div>
+                    <div class="footer-columns">
+                        <div class="footer-column">
+                            <h1 class="footer-column-title">Products</h1>
+                            <p class="footer-column-item">Delta</p>
+                            <p class="footer-column-item">Sigma</p>
+                            <p class="footer-column-item">Zeta</p>
+                            <p class="footer-column-item">Alpha</p>
+                            <p class="footer-column-item">Acumen</p>
+                        </div>
+                        <div class="footer-column">
+                            <h1 class="footer-column-title">Resources</h1>
+                            <p class="footer-column-item">Help</p>
+                            <p class="footer-column-item">Training Videos</p>
+                            <p class="footer-column-item">Webinars</p>
+                            <p class="footer-column-item">Request a Demo</p>
+                            <p class="footer-column-item">Create Surveys</p>
+                            <p class="footer-column-item">Quiz Maker</p>
+                        </div>
+                        <div class="footer-column">
+                            <h1 class="footer-column-title">Company</h1>
+                            <p class="footer-column-item">About Us</p>
+                            <p class="footer-column-item">Careers</p>
+                            <p class="footer-column-item">Team</p>
+                            <p class="footer-column-item">Contact Us</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="footer-basement">
+                    <p class="footer-basement-text footer-basement-rigth">Copyright 2022 Circle. All rights reserved.</p>
+                    <div class="footer-basement-socials">
+                        <img class="footer-basement-social" src=""/>
+                        <img class="footer-basement-social" src=""/>
+                    </div>
+                    <p class="footer-basement-text footer-basement-left">Privacy Policy | Data & Security | Terms of Service | Data & Security</p>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
