CSS implementation and essentials
-Added media (img,svg);
-Added font;
-Organized SCSS;
-Header styles applied (no adaptive);

--- a/index.html
+++ b/index.html
@@ -7,14 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <!--<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Volkhov:wght@700&display=swap" rel="stylesheet"> -->
-        <link rel="stylesheet" href="./style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
 
     <body>
-        <header>
+        <header class="header">
             <nav>
                 <ul>
                     <li class="header-nav-item" id="nav"><a href="">Features</a></li>
@@ -24,13 +22,12 @@
                 </ul>
             </nav>
 
-            <div class="header-logo"><svg><use href="./assets/svg/"></use></svg></div>
+            <img class="header-logo" src="./assets/Logo/Logo.png"/>
 
             <nav>
                 <ul>
                     <li class="header-nav-item" id="nav"><a href="">Company</a></li>
                     <li class="header-nav-item" id="nav"><a href="">Contact</a></li>
-
                     <button class="header-nav-button" id="nav"><a href="">Login</a></li>
                 </ul>
             </nav>
@@ -41,7 +38,7 @@
                 <h2 class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</h2>
                 <p class="text-description-smaller">With stellar one-click reports and unmatched support, see how Circle will make a difference in your business</p>
                 <button class="button hero-button">Get started free</button>
-                <img class="hero-image" src="assets/images/" width="" height=""/>
+                <img class="hero-image" src="assets/Images/Hero-img.png" width="" height=""/>
             </div>
         </section>
 
@@ -51,26 +48,26 @@
                 <h2 class="lower-title">Trusted by 100,000+ customers in 90+ countries</h2>
 
                 <ul class="customers-logo-row">
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
-                    <li><img class="customers-logo" src="assets/images/" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-capgemini.png" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-yamaha.png" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-biocon.png" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-dell.png" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-birla.png" width="" height=""/></li>
+                    <li><img class="customers-logo" src="assets/Logo/companies/logo-shell.png" width="" height=""/></li>
                 </ul>
 
                 <div class="customers-stats">
                     <div class="customers-stats-description">
-                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
-                        <p>18281 signed up last month</p> <!--Highlight-->
+                        <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
+                            18281 signed up last month</p> <!--Highlight-->
                     </div>
                     <div class="customers-stats-description">
-                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
-                        <p>GDPR- & CCPA-ready</p> <!--Highlight-->
+                        <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
+                            GDPR- & CCPA-ready</p> <!--Highlight-->
                     </div>
                     <div class="customers-stats-description">
-                        <svg class="s-nav"><use href="./assets/svg/"/></svg>
-                        <p>Leader@G2 Summer</p> <!--Highlight-->
+                        <p><svg class="customers-checkmark"><use href="assets/svg/checkmark.svg#checkmark"/></svg>
+                            Leader@G2 Summer</p> <!--Highlight-->
                     </div>
                 </div>
 
@@ -87,7 +84,7 @@
                     </div>
                     <button class="start-button">Get started free</button>
                 </div>
-                <img class="promises-img" src="assets/images/" width="" height=""/>
+                <img class="promises-img" src="assets/Images/promises-img.png" width="" height=""/>
             </div>
         </section>
 
@@ -96,12 +93,12 @@
                 <div class="section-title"><p>AWARDS</p></div>
                 <h2 class="lower-title">An award winning platform, loved by customers.</h2>
                 <div class="awards-cards-block">
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Market leader across 18 categories</p></div>
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Most loved SaaS tool in 2021</p></div>
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Category leader in 2022</p></div>
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Most recommended tool in 2021</p></div>
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Champion in survey tool 2022</p></div>
-                    <div class="award-card"><img class="award-card-img" src=""width="" height=""/><p class="award-card-text">Top performer spring 2021</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award1.png" height="100"/><p class="award-card-text">Market leader across 18 categories</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award2.png" height="100"/><p class="award-card-text">Most loved SaaS tool in 2021</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award3.png" height="100"/><p class="award-card-text">Category leader in 2022</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award4.png" height="100"/><p class="award-card-text">Most recommended tool in 2021</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award5.png" height="100"/><p class="award-card-text">Champion in survey tool 2022</p></div>
+                    <div class="award-card"><img class="award-card-img" src="assets/Logo/awards/award6.png" height="100"/><p class="award-card-text">Top performer spring 2021</p></div>
                 </div>
             </div>
         </section>
@@ -110,12 +107,20 @@
             <div class="container">
                 <div class="section-title"><p>BUILT FOR PEOPLE</p></div>
                 <h2 class="lower-title">Easy for beginners. Powerful for experts.</h2>
-                <div class="BfP-slider">
-                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Create</button>
-                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Distribute</button>
-                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Collect</button>
-                    <button class="BfP-slider-button"><img class="BfP-slider-icon" src="assets/svg/test.png" width="" height=""/>Analyze</button>
-                </div>
+                <ul class="BfP-slider">
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon1.svg#BfP-icon1"/></svg>
+                        Create
+                    </li>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon2.svg#BfP-icon2"/></svg>
+                        Distribute
+                    </li>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon3.svg#BfP-icon3"/></svg>
+                        Collect
+                    </li>
+                    <li class="BfP-slider-button"><svg class="BfP-slider-icon" width="25" height="25"><use href="assets/svg/BfP-icon4.svg#BfP-icon4"/></svg>
+                        Analyze
+                    </li>
+                </ul>
                 <div class="BfP-display-container">
                     <div class="BfP-display">
                         <div class="BfP-display-block">
@@ -127,7 +132,7 @@
                             </p>
                             <button class="start-button">Get started for free</button>
                         </div>
-                        <img class="BfP-display-block" src=""/>
+                        <img class="BfP-display-block" src="assets/Images/BfP-img.png"/>
                     </div>
                 </div>
             </div>
@@ -140,8 +145,10 @@
                     <h2 class="lower-title">See how customers drive impact</h2>
                     <button class="smaller-button">See case studies</button>
                 </div>
-                <img class="testemonials-img" src=""/>
-                <svg class="testemonials-playbutton"><use href="./assets/svg/"></use></svg>
+                <div class="testemonials-video">
+                    <img class="testemonials-img" src="assets/Images/testemonials-img.png"/>
+                    <svg class="testemonials-playbutton"><use href="assets/svg/playbutton.svg#playbutton"></use></svg>
+                </div>
                 <div class="testemonials-description-block">
                     <img class="testemonials-description-block-item testemonials-description-logo" src=""/>
                     <div class="testemonials-description-block-item"><p class="text-description">
@@ -167,7 +174,7 @@
                     <p class="text-description">Check out Sogolytics enterprise feedback and experience management platform.</p>
                     <button class="smaller-button">Learn more</button><button class="smaller-button button-white">Schedule a consultation</button>
                 </div>
-                <img class="solution-img" src=""/>
+                <img class="solution-img" src="assets/Images/solutions-img.png"/>
             </div>
         </section>
 
@@ -178,7 +185,7 @@
                 
                 <div class="resources-cards">
                     <div class="resources-card">
-                        <img class="resources-card-img" src=""/>
+                        <img class="resources-card-img" src="assets/Images/cards/recources-card1.png"/>
                         <p class="resources-card-title">Excepteur sint occaecat cupidatat non proident</p>
                         <p class="text-description-smaller">Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, 
                             sed quia consequuntur magni dolores eosNeque porro quisquam est, qui dolorem ipsum quia dolor sit amet, 
@@ -188,7 +195,7 @@
                     </div>
 
                     <div class="resources-card">
-                        <img class="resources-card-img" src=""/>
+                        <img class="resources-card-img" src="assets/Images/cards/recources-card2.png"/>
                         <p class="resources-card-title">Quis nostrum exercitationem ullam corporis suscipit laboriosam</p>
                         <p class="text-description-smaller">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis 
                             suscipit laboriosam. nisi ut aliquid ex ea commodi consequatur autem vel eum iure reprehenderit
@@ -197,7 +204,7 @@
                     </div>
 
                     <div class="resources-card">
-                        <img class="resources-card-img" src=""/>
+                        <img class="resources-card-img" src="assets/Images/cards/recources-card3.png"/>
                         <p class="resources-card-title">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                         <p class="text-description-smaller">Coluptatem accusantium doloremque laudantium, totam rem aperiam 
                             Aaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.
@@ -212,7 +219,7 @@
             <div class="container">
                 <div class="footer-menu">
                     <div class="SanFrancisco">
-                        <img class="SanFrancisco-img" src=""/>
+                        <img class="SanFrancisco-img" src="assets/Images/SanFrancisco-img.png"/>
                         <p class="SanFrancisco-text">Made with lots of ❤️ in San Francisco</p>
                     </div>
                     <div class="footer-columns">
