Added hero section styles

--- a/index.html
+++ b/index.html
@@ -35,9 +35,12 @@
 
         <section class="hero-section">
             <div class="container">
+            <div class="hero-background"></div>
                 <h2 class="hero-title">A powerful online engagement tool that’s intuitive and simple to use.</h2>
                 <p class="text-description-smaller">With stellar one-click reports and unmatched support, see how Circle will make a difference in your business</p>
-                <button class="button hero-button">Get started free</button>
+                <button class="blue-button hero-button"><a>Get started free</a>
+                    <svg class="button-arrow"><use href="assets/svg/button-arrow.svg#button-arrow"/></svg>
+                </button>
                 <img class="hero-image" src="assets/Images/Hero-img.png" width="" height=""/>
             </div>
         </section>
